[package]
name = "cuda_tensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-binding = { path = "../cuda-binding/cuda-binding" }
num = { version = "0.4.0" }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
rand_pcg = { version = "0.3.1" }