[package]
name = "cudnn_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "0.53.1" }

[dev-dependencies]
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
rand_xorshift = { version = "0.3.0" }