[package]
name = "deep_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linear_transform = { path = "../linear_transform" }
byteorder = { version = "1" }
num = { version = "0.4.0" }
hdf5 = { version = "0.8.1" }
trait-set = "0.3.0"

[dev-dependencies]
plotters = "0.3.4"
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
rand_xorshift = { version = "0.3.0" }
