[package]
name = "linear_transform"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4.0" }

[dev-dependencies]
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
rand_pcg = { version = "0.3.1" }
rand_xorshift = { version = "0.3.0" }