[package]
name = "cuda-binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cuda-sys = { path = "../cuda-sys" }

[dependencies.uuid]
version = "1.3.2"
features = [
	 "v4", "fast-rng", "macro-diagnostics"
]